# poetry-versioning

./: README.md  pyproject.toml
poetry_versioning/: main.py
