[tool.poetry]
name = "poetry-versioning"
version = "0.0.0"
description = "Small package to try out Poetry and dynamic versioning"
authors = ["José Loarca <jloarca@ehnusa.com>"]
readme = "README.md"
packages = [{include = "poetry_versioning"}]

[tool.poetry.dependencies]
python = "^3.8"
pytz = "^2022.6"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
style = "pep440"